Just need to fix the text alignment and the border radius and then im done

--- a/style.css
+++ b/style.css
@@ -37,16 +37,25 @@ body{background-color: #1F2D54;
     display: flex;
     height:600px;
     text-align: center;
+    vertical-align: middle;
 }
 .popular{
     font-weight: bold;
-    text-align: center;
     font-size: 20px;
-    background-color: #ed4c40;
-    margin: 0 auto;
-    width:100px;
-    height: auto;
-    ;
+    width:90px;
+    height: 0;
+    position: absolute;
+    border-bottom: 35px solid #ed4c40;
+    border-left: 35px solid transparent;
+    border-right: 35px solid transparent;
+    rotate: 45deg;
+    left: 257px;
+    top: 27px;
+}
+
+.popular p{
+    color: #fff;
+    margin-top: px;
 }
 .plans-header{
     background-color: #262863;
@@ -72,7 +81,7 @@ body{background-color: #1F2D54;
     display: flex;
     flex-direction: column;
     flex: 1;
-    position: relative;
+    position:relative;
     background-color:#efefef;
     display:flex;
     color:#262863;
@@ -86,6 +95,7 @@ body{background-color: #1F2D54;
 }
 
 .annual .plans-header{
+    position: relative;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     margin-top: -20px;
